# sqlite

./: .copier-answers.yml  Cargo.toml  README.md  act.toml  justfile  rust-toolchain.toml
.github/workflows/: ci.yml
e2e/: blob.hurl  create_and_query.hurl  describe_table.hurl  execute_batch.hurl  info.hurl  list_tables.hurl  list_tools.hurl  param_types.hurl  parameterized.hurl  update_delete.hurl
e2e/isolation/: isolation.hurl
e2e/vec/: vector_search.hurl
skill/: SKILL.md
src/: lib.rs
