[package]
name = "component-sqlite"
version = "0.2.0"
description = "SQLite database operations"
edition = "2024"

[features]
default = []
vec = ["dep:sqlite-vec"]

[dependencies]
act-sdk = { version = "0.2", path = "../../act-sdk-rs/act-sdk" }
wit-bindgen = { version = "0.54", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
serde_json = "1"
base64 = "0.22"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sqlite-vec = { version = "0.1", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
