[package]
name = "component-sqlite"
version = "0.4.0"
description = "SQLite database operations"
edition = "2024"

[features]
default = []
vec = ["dep:sqlite-vec"]

[dependencies]
act-sdk = "0.8"
wit-bindgen = { version = "0.58", features = ["async-spawn"] }
serde = { version = "1", features = ["derive"] }
schemars = "1"
ciborium = "0.2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
sqlite-vec = { version = "0.1", optional = true }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]
